fixed image overflow issue within sponsor panels

--- a/site/src/app/components/sponsors/Sponsors.scss
+++ b/site/src/app/components/sponsors/Sponsors.scss
@@ -9,8 +9,6 @@
 }
 
 .sponsor {
-	display: inline;
-
 	width: 46%;
 	aspect-ratio: 2 / 1;
 
@@ -20,7 +18,9 @@
 	border-radius: 20px;
 
 	img {
-		height: 100%;
+		width: 100%;
+        height: 100%;
+        object-fit: contain;
 		padding: 20px;
 	}
 
